2012-05-25   Diego Novillo  <dnovillo@google.com>

	* parser.c (gimple_register_var_decl_in_symtab): Tidy.
	(gl_peek_token): New.
	(gl_consume_token): Call it.
	(gl_tree_code_for_token): Add FIXME note.
	(gl_gimple_code_for_token): Likewise.
	(gl_dump): Surround the current token in '[[[' ']]]'.
	(gl_consume_expected_token): Only emit an error if no other errors
	have been emitted.
	(gp_parse_expect_subcode): Return the recognized code.  Return
	the read token in new argument *TOKEN_P.
	Update all callers.
	(gp_parse_expect_lhs): Call gl_peek_token.
	(gp_parse_expect_rhs_op): Rename from gp_parse_expect_rhs1.
	Call gl_peek_token.
	(gp_parse_expect_rhs2): Remove.
	(gp_parse_assign_stmt): Re-write to support all gimple RHS
	classes.
	(gp_parse_cond_stmt): Tidy.
	Emit an error if OPCODE is anything but a GIMPLE_BINARY_RHS.
	(gp_parse_goto_stmt): Tidy.
	(gp_parse_label_stmt): Tidy.
	(gp_parse_switch_stmt): Tidy.
	(gp_parse_stmt): Do not emit an error if one has been emitted
	already.
	(realloc_for_line_map): New.
	(gp_init): Use it.
	Update code to initialize the line table.
	(gimple_main): Tidy.

2012-05-24   Diego Novillo  <dnovillo@google.com>

	* Make-lang.in: Add support for check-gimple.

2012-03-23   Diego Novillo  <dnovillo@google.com>

	* gimple-lang.c (def_builtin_1): Call set_builtin_decl.
	Adjust to new builtin interfaces in 4.8.
	* parser.c (gimple_init): Adjust call to build_common_tree_nodes.
	Remove call to build_common_tree_nodes_2.

2012-03-08  Sandeep Soni  <soni.sandeepb@gmail.com>

	* parser.c (gl_lex_token): For every CPP_LSHIFT and CPP_RSHIFT tokens,
	split the token into two discrete CPP_LESS and CPP_GREATER tokens
	respectively.
	(gl_split_token): New. The split function for the case above.
	(gl_token_is_of_type): New. Checks if the tokens type is the expected
	type.
	(gp_parse_var_decl): Changing consumption of CPP_LSHIFT and CPP_RSHIFT
	tokens into CPP_LESS and CPP_GREATER tokens.
	(gp_parse_record_type): Ditto.
	(gp_parse_union_type): Ditto.