@@ -1,0 +1,1 @@
+var_decl <var, INTEGER_TYPE<4>>
