@@ -1,0 +1,1 @@
+var_decl<array_name, ARRAY_TYPE<0,9,INTEGER_TYPE<4>>>
