@@ -1,0 +1,1 @@
+var_decl<pointer_name, POINTER_TYPE <REAL_TYPE <4>>>
