@@ -1,0 +1,1 @@
+var_decl<var_name, RECORD_TYPE <record_name>>
